--- a/src/components/App.css
+++ b/src/components/App.css
@@ -2779,6 +2779,12 @@ html[lang="en"] .resource .data > [data-prop="bdo:creator"] h4[data-prop="bdo:ro
 
 .resource .data.related > div div.rel-or-crea > div { scroll-margin:20px;}
 
+.resource .data.related .react-tabs .rel-or-crea { padding-bottom:60px; }
+
+.resource .data.related .rel-or-crea .search { position:absolute; right:55px; bottom:65px; text-transform: uppercase; font-weight:700; 
+   color:white; background-color: #d73449; padding:5px 10px !important; font-size:12px; border-radius:4px; border:none !important;
+}
+
 /* ------------------------------------------------------------------------------------------------------------------------ extended properties */
 
 
