--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1242,6 +1242,17 @@ h4:not(:hover) > .lang
 
 /* ------------------------------------------------------------------------------------------------------------------------ outline */
 
+.resource .data#outline div .node-nav:not(#a) {
+   display:inline-block;
+   text-transform: uppercase;
+   color: white;
+   background-color: #d73449;
+   font-size: 10px;
+   font-weight: 700;
+   padding: 2px 4px;
+   border-radius: 3px;
+   cursor: pointer;
+}
 
 
 .resource .data#main-info,
