--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1228,13 +1228,22 @@ h4:not(:hover) > .lang
 /* ------------------------------------------------------------------------------------------------------------------------ static pages */
 
 .static-container > #samples { padding-top:65px;}
-.static-container > #samples > div { padding-left:70px; padding-right:70px; }
+.static-container > #samples > div { padding-left:75px; padding-right:75px; }
 .static-container #samples a { color:#d73449;}
 .static-container #samples a:hover { text-decoration: underline;}
 
 .static-container #samples h3 { margin-bottom:32px;}
 .static-container #samples p + h3 { margin-top:65px;}
 
+
+.static-container .hide.top { position:relative; overflow:hidden;}
+.static-container .hide.top { top:-70px; margin-bottom:-70px;}
+.static-container .hide.top::before { content:'';display: inline-block; background:white;width:100%;height:70px;position: absolute;}
+
+.static-container .over,
+.static-container h2 { z-index:1; position:relative; }
+
+.static-container img { max-width:100%; } 
 
 .nav.zhMirror a#about { margin-right:0; margin-left:20px;  }
 .nav.zhMirror a#about + a { margin-left:-95px;  }
