--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1235,11 +1235,11 @@ h4:not(:hover) > .lang
 .static-container #samples h3 { margin-bottom:32px;}
 .static-container #samples p + h3 { margin-top:65px;}
 
-.static-container iframe { border:none; }
 
-.static-container .hide.top { position:relative; overflow:hidden;}
-.static-container .hide.top { top:-70px; margin-bottom:-70px;}
-.static-container .hide.top::before { content:'';display: inline-block; background:white;width:100%;height:70px;position: absolute;}
+.static-container .hide.top { position:relative; overflow:hidden; display:block;}
+.static-container .hide.top iframe { border:none; z-index:-1; display:block; margin-top:-150px; margin-bottom:-150px;}
+/* no need for this actually: */
+/* .static-container .hide.top::before { content:'';display: inline-block; background:white;width:100%;height:145px;position: absolute;}  */
 
 .static-container .over,
 .static-container h2 { z-index:1; position:relative; }
