--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1235,20 +1235,29 @@ h4:not(:hover) > .lang
 .static-container #samples h3 { margin-bottom:32px;}
 .static-container #samples p + h3 { margin-top:65px;}
 
-.static-container .center { text-align: center; }
+.nav.zhMirror a#about { margin-right:0; margin-left:20px;  }
+.nav.zhMirror a#about + a { margin-left:-95px;  }
 
-.static-container .hide.top { position:relative; overflow:hidden; display:block;}
-.static-container .hide.top iframe { border:none; z-index:-1; display:block; margin-top:-150px; margin-bottom:-150px;}
+
+.budax .static-container .center { text-align: center; }
+
+.budax .static-container .hide.top { position:relative; overflow:hidden; display:block;}
+.budax .static-container .hide.top iframe { border:none; z-index:-1; display:block; margin-top:-150px; margin-bottom:-150px;}
 /* no need for this actually: */
 /* .static-container .hide.top::before { content:'';display: inline-block; background:white;width:100%;height:145px;position: absolute;}  */
 
-.static-container .over,
-.static-container h2 { z-index:1; position:relative; }
+.budax .static-container .over,
+.budax .static-container h2 { z-index:1; position:relative; }
 
-.static-container img { max-width:100%; } 
+.budax .static-container iframe,
+.budax .static-container img { max-width:100%; } 
 
-.nav.zhMirror a#about { margin-right:0; margin-left:20px;  }
-.nav.zhMirror a#about + a { margin-left:-95px;  }
+@media only screen and (max-device-width:1440px) {
+   .budax body { min-width:840px; }
+   .budax .static-container #samples > div { padding:0 20px;}
+
+   .budax .static-container #samples .hide.top iframe { margin-top:-100px; margin-bottom:-130px;  }
+}
 
 
 /* ------------------------------------------------------------------------------------------------------------------------ outline */
