--- a/src/components/App.css
+++ b/src/components/App.css
@@ -447,7 +447,7 @@ body { overflow:auto !important;padding-right:0 !important; /*font-family:"Robot
 
 .nav #logo a#BDRC + a img { height:40px;}
 
-.nav #logo.khmer > a:first-child img { width:70px; height:auto;}
+.nav #logo.khmer > a:first-child img { width:65px; height:auto; margin-right:0; }
 
 .nav #logo > a:first-child img { height:65px; display: inline-block; margin-right:10px;}
 .nav #logo > a:first-child * { vertical-align: middle;}
@@ -508,6 +508,24 @@ footer #donate,
 /* ---------------------------------------------------------------------------------------------------------------------- Cambodia website */
 
 .App.home.khmer:not(.static) h1 { text-align:left; }
+
+.App.home.khmerServer #search-bar { background-image: linear-gradient(249deg, #0c5f89 0%, #9ccab4 100%, #a5d0b6 100%); padding: 60px 0;}
+.App.home.khmerServer #search-bar > div:first-child { width:400px; } 
+.App.home.khmerServer #search-bar > div:first-child > div:first-child >  div:first-child { margin-right:0px; width:100%;}
+.App.home.khmerServer #search-bar button:first-of-type { margin-right:-48px; }
+.App.home.khmerServer #search-bar button:first-of-type svg { color: #d73449 !important; opacity:1 !important; }
+
+.App.home.khmerServer #search-bar .links { padding-right: 50px; }
+.App.home.khmerServer #search-bar .links a { margin: 0 45px; display: inline-block; padding-bottom:5px; }
+.App.home.khmerServer #search-bar .links > span { position: relative; }
+.App.home.khmerServer #search-bar .links > span:first-child::after { content:''; position:absolute; display: block; right:0; top:3px; height:20px;width:1px; background:white;}  
+.App.home.khmerServer #search-bar .links > span:first-child a { box-shadow:inset 0 -1.5px 1px white; }
+.App.home.khmerServer #search-bar .links a { color:white; font-size:14px; text-transform: uppercase; font-weight:700;}
+
+.App.home.khmerServer .SearchPane #logo > div { justify-content: flex-start; padding-left:275px;}
+.App.home.khmerServer .SearchPane #logo > div > div { padding:50px; height:auto; }
+.App.home.khmerServer .SearchPane #logo > div > div h1 { font-family:"Noto Sans", "Noto Sans Khmer" !important; font-weight:900;} 
+.App.home.khmerServer .SearchPane #logo > div > div p { text-align: left; font-size:16px;margin-bottom: 0;}
 
 /* ---------------------------------------------------------------------------------------------------------------------- "sidepanes" */
 
