--- a/src/components/App.css
+++ b/src/components/App.css
@@ -509,23 +509,52 @@ footer #donate,
 
 .App.home.khmer:not(.static) h1 { text-align:left; }
 
-.App.home.khmerServer #search-bar { background-image: linear-gradient(249deg, #0c5f89 0%, #9ccab4 100%, #a5d0b6 100%); padding: 60px 0;}
+.App.home.khmerServer #search-bar { background-image: linear-gradient(249deg, #0c5f89 0%, #9ccab4 100%, #a5d0b6 100%); padding: 55px 0;}
 .App.home.khmerServer #search-bar > div:first-child { width:400px; } 
 .App.home.khmerServer #search-bar > div:first-child > div:first-child >  div:first-child { margin-right:0px; width:100%;}
 .App.home.khmerServer #search-bar button:first-of-type { margin-right:-48px; }
 .App.home.khmerServer #search-bar button:first-of-type svg { color: #d73449 !important; opacity:1 !important; }
 
-.App.home.khmerServer #search-bar .links { padding-right: 50px; }
+.App.home.khmerServer #search-bar .links { padding-right: 50px; display:inline-flex; align-items: stretch;}
 .App.home.khmerServer #search-bar .links a { margin: 0 45px; display: inline-block; padding-bottom:5px; }
-.App.home.khmerServer #search-bar .links > span { position: relative; }
-.App.home.khmerServer #search-bar .links > span:first-child::after { content:''; position:absolute; display: block; right:0; top:3px; height:20px;width:1px; background:white;}  
-.App.home.khmerServer #search-bar .links > span:first-child a { box-shadow:inset 0 -1.5px 1px white; }
+.App.home.khmerServer #search-bar .links > span { position: relative; display: inline-flex;}
+.App.home.khmerServer #search-bar .links > span:first-child::after { content:''; position:absolute; display: block; right:0; top:0px; height:20px;width:1px; background:white;}  
+.App.home.khmerServer #search-bar .links > span:first-child a { overflow:hidden; position: relative;  }
+.App.home.khmerServer #search-bar .links > span:first-child a::before { content:''; display:block; width:110%; height:100%;box-shadow:inset 0 -1.5px 1px white; position: absolute;left:-5%;}
 .App.home.khmerServer #search-bar .links a { color:white; font-size:14px; text-transform: uppercase; font-weight:700;}
 
-.App.home.khmerServer .SearchPane #logo > div { justify-content: flex-start; padding-left:275px;}
+.App.home.khmerServer .SearchPane #logo > div { justify-content: flex-start; padding-left:calc(135px + (100% - 1440px) / 2); box-sizing: border-box;}
 .App.home.khmerServer .SearchPane #logo > div > div { padding:50px; height:auto; }
 .App.home.khmerServer .SearchPane #logo > div > div h1 { font-family:"Noto Sans", "Noto Sans Khmer" !important; font-weight:900;} 
 .App.home.khmerServer .SearchPane #logo > div > div p { text-align: left; font-size:16px;margin-bottom: 0;}
+
+.App.home.khmerServer #data-checkbox { display:none; }
+
+.App.home.khmerServer section.white-bg + .white-bg { padding-top:0 ;}
+.App.home.khmerServer section.white-bg { background: white; }
+.App.home.khmerServer section p:last-child { margin-bottom: 0; } 
+.App.home.khmerServer section > div { width: 1222px; max-width:100%; margin:0 auto; text-align: left; padding-left:80px; box-sizing: border-box; position: relative;}
+.App.home.khmerServer section { padding:80px 0 80px 0; clear:both; }
+
+.App.home.khmerServer section h2 { margin-top:0;  width:635px; font-size:34px; font-weight:700; color:#152631; margin-bottom:0;}
+.App.home.khmerServer section h2::after { content:''; border-bottom: 2px solid #e9665c; height:0px; width: 95px; display: block; margin-top:40px;margin-bottom: 25px; }
+.App.home.khmerServer section p { width:570px; font-size:16px; color:#4a4a4a; } 
+.App.home.khmerServer section .note { color:#d73449; }
+.App.home.khmerServer section .noteText:first-child { margin-top:120px; }
+.App.home.khmerServer section .noteText { display:block; font-size:12px; vertical-align: baseline; color:#4a4a4a;}
+.App.home.khmerServer section .noteText .note { font-size:16px; padding-right:10px; }
+
+.App.home.khmerServer section .float { float:right; text-align: center; padding-bottom:50px;}
+.App.home.khmerServer section .float img { width:485px;height:485px; object-position: center; object-fit: none; border-radius:50%; margin-top:125px; }
+.App.home.khmerServer section .float p { width: 160px ; margin:0 auto; display:block; text-align: left; font-style: italic; font-size:12px;margin-top:40px;}
+
+.App.home.khmerServer section .abs { position:absolute; text-align: center; width:100%; box-sizing: border-box; margin-top:-30px;}
+.App.home.khmerServer section .abs a { text-transform:uppercase; font-size:14px; overflow: hidden; color:#111312; padding-bottom:5px; position: relative; display: inline-block;}
+.App.home.khmerServer section .abs a::before { content:''; display:block; width:110%; height:100%;box-shadow:inset 0 -1.5px 1px #152631; position: absolute;left:-5%;}
+
+@media(max-width:1280px) {
+   .App.home.khmerServer .SearchPane #logo > div { padding-left:50px;  }
+}
 
 /* ---------------------------------------------------------------------------------------------------------------------- "sidepanes" */
 
